fix: ConfigModal.module.css gap

--- a/src/styles/ConfigModal.module.css
+++ b/src/styles/ConfigModal.module.css
@@ -189,6 +189,7 @@
 	flex: 1;
 	display: flex;
 	flex-direction: column;
+  gap: 10px;
 }
 
 .chip {
